--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>minions</artifactId>
+		<groupId>com.netease.Mutest</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.</groupId>
-	<artifactId></artifactId>
+	<groupId>com.cddt</groupId>
+	<artifactId>Uni-EMS-Server</artifactId>
 	<version>V01.00</version>
 	<packaging>jar</packaging>
-  
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -83,7 +81,7 @@
     <build>
         <finalName>/${project.artifactId}-${project.version}/${project.artifactId}</finalName>
     	<sourceDirectory>src/main/java</sourceDirectory>
-    
+
     	<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -91,6 +89,33 @@
 		</resources>
 		
         <plugins>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>Copy App Content</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>src/main/resources/static/dist</outputDirectory>
+							<overwrite>true</overwrite>
+							<resources>
+								<resource>
+									<directory>${project.parent.basedir}/frontend/dist</directory>
+									<includes>
+										<include>static/</include>
+										<include>config/</include>
+										<include>index.html</include>
+									</includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
         	<!-- 指定可运行jar的主函数类 -->
 			<!-- 打包jar文件时，配置MANIFEST.MF文件，指定可运行jar的主函数类 -->
 			<plugin>
